--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "tsc && node dist/server.js",
     "start:dev": "tsc && concurrently \"tsc -w\" \"nodemon dist/server.js\"",
-    "start:prod": "SET NODE_ENV=production && npm start"
+    "start:prod": "SET NODE_ENV=production && npm start",
+    "typeorm": "typeorm-ts-node-esm -d ./src/config/data.source.ts",
+    "m:gen": "npm run typeorm migration:generate",
+    "m:run": "npm run typeorm migration:run"
   },
   "author": "Dayana Agudo",
   "license": "ISC",
@@ -19,6 +22,7 @@
     "express": "^4.18.1",
     "morgan": "^1.10.0",
     "pg": "^8.7.3",
+    "reflect-metadata": "^0.1.13",
     "typeorm": "^0.3.6",
     "typeorm-naming-strategies": "^4.1.0",
     "typescript": "^4.7.2"
@@ -28,6 +32,7 @@
     "@types/express": "^4.17.13",
     "@types/morgan": "^1.9.3",
     "concurrently": "^7.2.1",
-    "nodemon": "^2.0.16"
+    "nodemon": "^2.0.16",
+    "ts-node": "^10.8.0"
   }
 }
